# blazity-hackaton-team3

./: AGENTS.md  CLAUDE.md  README.md
.ai/: LANGUAGE.md
.ai/memory/: architecture.md  product.md  stack.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/application/: dto.py  ports.py
backend/app/application/prompts/: platform_prompts.py  refine_prompts.py
backend/app/application/use_cases/: generate_campaign.py  generate_posts.py  upload_files.py
backend/app/core/: config.py
backend/app/domain/: entities.py  exceptions.py  value_objects.py
backend/app/infrastructure/ai/: anthropic_client.py  openrouter_client.py  output.py
backend/app/infrastructure/db/: models.py  repositories.py  session.py
backend/app/infrastructure/storage/: minio_storage.py
backend/app/interface/: dependencies.py  schemas.py
backend/app/interface/api/v1/: campaigns.py  generate.py  router.py  uploads.py
backend/migrations/: env.py
backend/migrations/versions/: 20260630_0001_initial.py
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: hero.tsx
frontend/components/landing/: cta.tsx  features.tsx  footer.tsx  how-it-works.tsx  platforms.tsx
frontend/components/layout/: dashboard-shell.tsx  sidebar-nav-item.tsx  sidebar.tsx  top-header.tsx
frontend/lib/: flowforge-api.ts
frontend/platform-aware-content-generator/: package-lock.json
scripts/: dev.sh
(+17 files in other folders)
