[project]
name = "flowforge-backend"
version = "0.1.0"
description = "FlowForge backend: FastAPI + PostgreSQL + MinIO"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "minio>=7.2.0",
  "python-multipart>=0.0.9",
  "python-magic>=0.4.27",
  "anthropic>=0.40.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
